2006-10-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Implement [CKCollection -itemsUnderGroup:] and test unit.
	* Remove records from its groups first 
          before removing it from collection.
	* Make unit test work on GNUstep.

2006-10-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add CKCollectionView.
	* Support NSNumber for value.

2006-10-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add missing header.
	* Memory fix.

2006-10-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add CKSearchElement.

2006-10-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Remove kCKGroupNameProperty considering it is not necessary
          for CollectionKit.
	* Fix memory leak.
	* Fix bug in recursively removal.

2006-10-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add version control of format.
	* Fix loading of CKGroup.

2006-10-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix save.

2006-10-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Fix warning on Linux.
	* Unit Test Result: 3 classes, 8 methods, 43 tests, 0 failed

2006-10-08 Yen-Ju Chen <yjchenx at gmail _dot_ com>
	
	* Initial import (tested on mac only).
